feat: Launch new Content Scraper Premium website with product download and styling.

--- a/website/en/index.html
+++ b/website/en/index.html
@@ -36,23 +36,29 @@
 
     <main>
         <section class="hero">
+            <div class="hero-image-background">
+                <img src="/images/demon_hero.png" alt="Background">
+            </div>
             <div class="hero-content">
                 <h1>Clone Telegram Channels<br><span class="gradient-text">In Real-Time</span></h1>
                 <p>The ultimate tool for content automated mirroring. Clone media, albums, and text instantly with smart
                     modification rules.</p>
                 <div class="hero-btns">
-                    <a href="content-scraper-premium.zip" class="btn-primary" download>Download Now</a>
+                    <a href="../content-scraper-premium.zip" class="btn-primary" download>Download Now</a>
                     <a href="docs.html" class="btn-secondary">Learn More</a>
                 </div>
             </div>
-            <div class="hero-visual glass">
-                <div class="code-preview">
-                    <div class="line"><span class="c-purple">const</span> <span class="c-blue">clone</span> = <span
-                            class="c-purple">await</span> bot.<span class="c-yellow">start</span>();</div>
-                    <div class="line"><span class="c-green">// Real-time monitoring active</span></div>
-                    <div class="line"><span class="c-blue">Processing</span> message: <span
-                            class="c-orange">#4829</span></div>
-                    <div class="line">Status: <span class="c-green">Cloned ✅</span></div>
+            <div class="hero-visual">
+                <img src="/images/demon_hero.png" alt="Neon Demon" class="hero-main-img">
+                <div class="hero-visual-overlay glass">
+                    <div class="code-preview">
+                        <div class="line"><span class="c-purple">const</span> <span class="c-blue">clone</span> = <span
+                                class="c-purple">await</span> bot.<span class="c-yellow">start</span>();</div>
+                        <div class="line"><span class="c-green">// Real-time monitoring active</span></div>
+                        <div class="line"><span class="c-blue">Processing</span> message: <span
+                                class="c-orange">#4829</span></div>
+                        <div class="line">Status: <span class="c-green">Cloned ✅</span></div>
+                    </div>
                 </div>
             </div>
         </section>
