--- a/website/index.html
+++ b/website/index.html
@@ -36,10 +36,10 @@
 
     <main>
         <section class="hero">
+            <div class="hero-image-background">
+                <img src="/images/demon_hero.png" alt="Background">
+            </div>
             <div class="hero-content">
-                <div class="hero-image-container">
-                    <img src="/images/demon_hero.png" alt="Content Scraper Premium" class="hero-main-img">
-                </div>
                 <h1>Масштабируйте свой контент в <span>Telegram</span></h1>
                 <p>Профессиональный инструмент для автоматического клонирования каналов, обхода ограничений и глубокой
                     аналитики контента.</p>
@@ -48,14 +48,17 @@
                     <a href="docs.html" class="btn-secondary">Документация</a>
                 </div>
             </div>
-            <div class="hero-visual glass">
-                <div class="code-preview">
-                    <div class="line"><span class="c-purple">const</span> <span class="c-blue">clone</span> = <span
-                            class="c-purple">await</span> bot.<span class="c-yellow">start</span>();</div>
-                    <div class="line"><span class="c-green">// Мониторинг запущен</span></div>
-                    <div class="line"><span class="c-blue">Обработка</span> сообщения: <span
-                            class="c-orange">#4829</span></div>
-                    <div class="line">Статус: <span class="c-green">Клонировано ✅</span></div>
+            <div class="hero-visual">
+                <img src="/images/demon_hero.png" alt="Neon Demon" class="hero-main-img">
+                <div class="hero-visual-overlay glass">
+                    <div class="code-preview">
+                        <div class="line"><span class="c-purple">const</span> <span class="c-blue">clone</span> = <span
+                                class="c-purple">await</span> bot.<span class="c-yellow">start</span>();</div>
+                        <div class="line"><span class="c-green">// Мониторинг запущен</span></div>
+                        <div class="line"><span class="c-blue">Обработка</span> сообщения: <span
+                                class="c-orange">#4829</span></div>
+                        <div class="line">Статус: <span class="c-green">Клонировано ✅</span></div>
+                    </div>
                 </div>
             </div>
         </section>
