--- a/website/en/index.html
+++ b/website/en/index.html
@@ -37,7 +37,7 @@
     <main>
         <section class="hero">
             <div class="hero-image-background">
-                <img src="/images/demon_hero.png" alt="Background">
+                <img src="../images/demon_hero.png" alt="Background">
             </div>
             <div class="hero-content">
                 <h1>Clone Telegram Channels<br><span class="gradient-text">In Real-Time</span></h1>
@@ -49,7 +49,7 @@
                 </div>
             </div>
             <div class="hero-visual">
-                <img src="/images/demon_hero.png" alt="Neon Demon" class="hero-main-img">
+                <img src="../images/demon_hero.png" alt="Neon Demon" class="hero-main-img">
                 <div class="hero-visual-overlay glass">
                     <div class="code-preview">
                         <div class="line"><span class="c-purple">const</span> <span class="c-blue">clone</span> = <span
@@ -77,7 +77,7 @@
                     <p>Full support for Photos, Videos, Documents, Audio, and complex Media Groups (Albums).</p>
                 </div>
                 <div class="card glass">
-                    <div class="icon"><img src="/images/demon_icon.png" alt="Sniffer"
+                    <div class="icon"><img src="../images/demon_icon.png" alt="Sniffer"
                             style="width: 44px; height: 44px; object-fit: contain; border-radius: 8px;"></div>
                     <h3>Channel ID Sniffer</h3>
                     <p>Intercept IDs of any private channels in real-time. Just subscribe, and you have the ID.</p>
