feat: make 'Start working' button downloadable and update distribution zip

--- a/website/index.html
+++ b/website/index.html
@@ -44,7 +44,7 @@
                 <p>Профессиональный инструмент для автоматического клонирования каналов, обхода ограничений и глубокой
                     аналитики контента.</p>
                 <div class="hero-btns">
-                    <a href="#pricing" class="btn-primary">Начать работу</a>
+                    <a href="content-scraper-premium.zip" class="btn-primary" download>Начать работу</a>
                     <a href="docs.html" class="btn-secondary">Документация</a>
                 </div>
             </div>
