feat: gate video note conversion with pro license check

--- a/website/index.html
+++ b/website/index.html
@@ -66,6 +66,11 @@
         <section id="features" class="features">
             <h2>Премиум Возможности</h2>
             <div class="grid">
+                <div class="card glass special-feature" style="border: 1px solid rgba(0, 255, 136, 0.3);">
+                    <div class="icon">🟢</div>
+                    <h3>Video Note Support</h3>
+                    <p>Эксклюзив! Полная поддержка и автоматическая конвертация "круглых" видео-сообщений.</p>
+                </div>
                 <div class="card glass">
                     <div class="icon">⚡</div>
                     <h3>Клонирование 24/7</h3>
