--- a/website/index.html
+++ b/website/index.html
@@ -69,7 +69,7 @@
                 <div class="card glass special-feature" style="border: 1px solid rgba(0, 255, 136, 0.3);">
                     <div class="icon">🟢</div>
                     <h3>Video Note Support</h3>
-                    <p>Эксклюзив! Полная поддержка и автоматическая конвертация "круглых" видео-сообщений.</p>
+                    <p>Эксклюзив! Полная поддержка и автоматическая конвертация "Кружочков".</p>
                 </div>
                 <div class="card glass">
                     <div class="icon">⚡</div>
