--- a/website/en/index.html
+++ b/website/en/index.html
@@ -66,6 +66,11 @@
         <section id="features" class="features">
             <h2>Premium Features</h2>
             <div class="grid">
+                <div class="card glass special-feature" style="border: 1px solid rgba(0, 255, 136, 0.3);">
+                    <div class="icon">🟢</div>
+                    <h3>Video Note Support</h3>
+                    <p>Exclusive! Full support and automatic conversion of Video Notes (round videos).</p>
+                </div>
                 <div class="card glass">
                     <div class="icon">⚡</div>
                     <h3>Real-Time Cloning</h3>
