site: added premium animated SVG icon for Video Notes (Кружочки)

--- a/website/index.html
+++ b/website/index.html
@@ -67,7 +67,24 @@
             <h2>Премиум Возможности</h2>
             <div class="grid">
                 <div class="card glass special-feature" style="border: 1px solid rgba(0, 255, 136, 0.3);">
-                    <div class="icon">🟢</div>
+                    <div class="icon">
+                        <div class="vn-icon-container">
+                            <svg viewBox="0 0 100 100" class="vn-icon-svg">
+                                <defs>
+                                    <radialGradient id="vn-lens-grad" cx="50%" cy="50%" r="50%" fx="30%" fy="30%">
+                                        <stop offset="0%" style="stop-color:#a855f7;stop-opacity:0.8" />
+                                        <stop offset="70%" style="stop-color:#1e1b4b;stop-opacity:1" />
+                                        <stop offset="100%" style="stop-color:#0f172a;stop-opacity:1" />
+                                    </radialGradient>
+                                </defs>
+                                <circle cx="50" cy="50" r="48" class="vn-outer-ring" />
+                                <circle cx="50" cy="50" r="42" class="vn-inner-circle" />
+                                <circle cx="50" cy="50" r="25" class="vn-lens-body" />
+                                <circle cx="50" cy="50" r="18" class="vn-lens-glass" />
+                                <circle cx="65" cy="35" r="3" class="vn-rec-dot" />
+                            </svg>
+                        </div>
+                    </div>
                     <h3>Video Note Support</h3>
                     <p>Эксклюзив! Полная поддержка и автоматическая конвертация "Кружочков".</p>
                 </div>
