--- a/website/en/index.html
+++ b/website/en/index.html
@@ -81,7 +81,7 @@
                                 <circle cx="50" cy="50" r="42" class="vn-inner-circle" />
                                 <circle cx="50" cy="50" r="25" class="vn-lens-body" />
                                 <circle cx="50" cy="50" r="18" class="vn-lens-glass" />
-                                <circle cx="65" cy="35" r="3" class="vn-rec-dot" />
+                                <circle cx="65" cy="35" r="5" class="vn-rec-dot" />
                             </svg>
                         </div>
                     </div>
@@ -99,8 +99,10 @@
                     <p>Full support for Photos, Videos, Documents, Audio, and complex Media Groups (Albums).</p>
                 </div>
                 <div class="card glass">
-                    <div class="icon"><img src="../images/demon_icon.png" alt="Sniffer"
-                            style="width: 44px; height: 44px; object-fit: contain; border-radius: 8px;"></div>
+                    <div class="icon">
+                        <img src="../images/demon_icon.png" alt="Sniffer"
+                            style="width: 44px; height: 44px; object-fit: contain; border-radius: 8px;">
+                    </div>
                     <h3>Channel ID Sniffer</h3>
                     <p>Intercept IDs of any private channels in real-time. Just subscribe, and you have the ID.</p>
                 </div>
