site: final UI refinements, pricing update, and documentation refresh

--- a/website/contact.html
+++ b/website/contact.html
@@ -35,9 +35,9 @@
                 чтобы помочь.</p>
             <div class="card glass" style="max-width: 500px; margin: 0 auto; padding: 3rem;">
                 <p>Поддержка в Telegram</p>
-                <h3>@your_support_handle</h3>
+                <h3>@N1_htPr1</h3>
                 <p style="margin-top: 2rem;">Email</p>
-                <p>support@contentscraper.tech</p>
+                <p>bestbetgamess@gmail.com</p>
             </div>
         </section>
     </main>
