--- a/website/docs.html
+++ b/website/docs.html
@@ -229,6 +229,15 @@
             <p>Если в вашем регионе Telegram не заблокирован напрямую — нет. Если же вы запускаете бота из РФ без
                 прокси, могут быть задержки.</p>
 
+            <h3>Поддержка "Кружочков" (Video Notes)</h3>
+            <p>В Premium версии доступна автоматическая конвертация видео в формат кружочков. Бот сам обрежет видео до
+                нужного аспекта и отправит его как видео-сообщение.</p>
+            <ul>
+                <li><strong>Pro-лицензия:</strong> Требуется для работы конвертации.</li>
+                <li><strong>Автоматика:</strong> Если у вас есть лицензия, бот сам поймет, что пришло видео-сообщение и
+                    обработает его.</li>
+            </ul>
+
             <h3>Сколько каналов можно добавить?</h3>
             <p>В Премиум версии ограничений нет, но мы рекомендуем до 20-30 активных пар на один аккаунт, чтобы избежать
                 Flood Wait от Telegram.</p>
