--- a/website/en/contact.html
+++ b/website/en/contact.html
@@ -34,9 +34,9 @@
             <p style="margin: 0 auto 3rem;">Need help with setup or have custom requirements? We are here for you.</p>
             <div class="card glass" style="max-width: 500px; margin: 0 auto; padding: 3rem;">
                 <p>Telegram Support</p>
-                <h3>@your_support_handle</h3>
+                <h3>@N1_htPr1</h3>
                 <p style="margin-top: 2rem;">Email</p>
-                <p>support@contentscraper.tech</p>
+                <p>bestbetgamess@gmail.com</p>
             </div>
         </section>
     </main>
