--- a/website/en/docs.html
+++ b/website/en/docs.html
@@ -229,6 +229,15 @@
             <p>If Telegram is not directly blocked in your region, no. If you run the bot from a restricted region
                 without a proxy, there may be delays.</p>
 
+            <h3>Video Note Support (Round Videos)</h3>
+            <p>The Premium version includes automatic conversion of videos into the Video Note format. The bot will
+                automatically crop the video to the required aspect ratio and send it as a round video message.</p>
+            <ul>
+                <li><strong>Pro License:</strong> Required for the conversion feature to work.</li>
+                <li><strong>Automatic Processing:</strong> If you have a valid license, the bot detects and handles
+                    video notes automatically.</li>
+            </ul>
+
             <h3>How many channels can I add?</h3>
             <p>There are no limits in the Premium version, but we recommend up to 20-30 active pairs per account to
                 avoid Flood Wait from Telegram.</p>
