site: integrated spooky visual and updated terminology

--- a/website/contact.html
+++ b/website/contact.html
@@ -33,6 +33,9 @@
             <h1 class="gradient-text">Связаться с нами</h1>
             <p style="margin: 0 auto 3rem;">Нужна помощь с настройкой или есть индивидуальные требования? Мы здесь,
                 чтобы помочь.</p>
+            <div class="contact-visual-container">
+                <img src="images/contact_visual.png" alt="Avatar" class="spooky-img">
+            </div>
             <div class="card glass" style="max-width: 500px; margin: 0 auto; padding: 3rem;">
                 <p>Поддержка в Telegram</p>
                 <h3>@N1_htPr1</h3>
