--- a/website/docs.html
+++ b/website/docs.html
@@ -226,7 +226,7 @@
         <section class="doc-section">
             <h2>6. Часто задаваемые вопросы (FAQ)</h2>
             <h3>Нужен ли VPN?</h3>
-            <p>Если в вашем регионе Telegram не заблокирован напрямую — нет. Если же вы запускаете бота из РФ без
+            <p>Если в вашем регионе Telegram не заблокирован напрямую — нет. Если же вы запускаете бота из Рашки без
                 прокси, могут быть задержки.</p>
 
             <h3>Поддержка "Кружочков" (Video Notes)</h3>
