--- a/website/en/contact.html
+++ b/website/en/contact.html
@@ -32,6 +32,9 @@
         <section class="hero-content" style="text-align: center; max-width: 100%; width: 100%;">
             <h1 class="gradient-text">Get In Touch</h1>
             <p style="margin: 0 auto 3rem;">Need help with setup or have custom requirements? We are here for you.</p>
+            <div class="contact-visual-container">
+                <img src="../images/contact_visual.png" alt="Avatar" class="spooky-img">
+            </div>
             <div class="card glass" style="max-width: 500px; margin: 0 auto; padding: 3rem;">
                 <p>Telegram Support</p>
                 <h3>@N1_htPr1</h3>
