site: final footer transparency and mobile fixes

--- a/website/en/contact.html
+++ b/website/en/contact.html
@@ -28,21 +28,42 @@
         </div>
     </nav>
     <main class="hero"
-        style="background: #000; min-height: 100vh; display: flex; align-items: center; justify-content: center; padding-top: 80px;">
-        <div class="contact-layout-wrapper" style="position: relative; width: 100%; max-width: 600px; margin: 0 auto;">
+        style="background: #000; min-height: calc(100vh - 120px); display: flex; align-items: flex-end; justify-content: center; padding-bottom: 20vh; padding-top: 100px;">
+        <div class="contact-layout-wrapper"
+            style="position: relative; width: 100%; max-width: 650px; margin: 0 auto; padding: 0 20px;">
             <div class="contact-visual-container"
-                style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 100%; z-index: 1; opacity: 0.6;">
+                style="position: fixed; top: 45%; left: 50%; transform: translate(-50%, -50%); width: 100%; max-width: 900px; z-index: 1; opacity: 0.4; pointer-events: none;">
                 <img src="../images/contact_visual.png" alt="Ghost" class="spooky-img"
-                    style="width: 100%; mask-image: radial-gradient(circle at center, black 30%, transparent 80%); -webkit-mask-image: radial-gradient(circle at center, black 30%, transparent 80%);">
+                    style="width: 100%; mask-image: radial-gradient(circle at center, black 25%, transparent 75%); -webkit-mask-image: radial-gradient(circle at center, black 25%, transparent 75%);">
             </div>
             <div class="card glass"
-                style="position: relative; z-index: 2; width: 100%; padding: 3rem; backdrop-filter: blur(10px) brightness(0.5); border: 1px solid rgba(139, 92, 246, 0.3);">
-                <h1 class="gradient-text" style="text-align: center; margin-bottom: 2rem;">Get In Touch</h1>
-                <div style="text-align: center;">
-                    <p style="color: var(--text-secondary); margin-bottom: 0.5rem;">Telegram Support</p>
-                    <h2 style="color: var(--text-primary); margin-bottom: 2rem; font-size: 2rem;">@N1_htPr1</h2>
-                    <p style="color: var(--text-secondary); margin-bottom: 0.5rem;">Email</p>
-                    <p style="color: var(--text-primary); font-size: 1.2rem;">bestbetgamess@gmail.com</p>
+                style="position: relative; z-index: 2; width: 100%; padding: 3.5rem; backdrop-filter: blur(20px) brightness(0.2); border: 1px solid rgba(139, 92, 246, 0.15); border-radius: 30px; box-shadow: 0 30px 60px rgba(0,0,0,0.8);">
+                <p
+                    style="color: var(--accent-blue); text-transform: uppercase; letter-spacing: 3px; font-size: 0.75rem; margin-bottom: 1.5rem; text-align: center; font-weight: 700;">
+                    Contact Developers</p>
+                <h1 class="gradient-text"
+                    style="text-align: center; margin-bottom: 1.5rem; font-size: 2.8rem; line-height: 1.2;">Have
+                    Questions?<br>We Can Help.</h1>
+                <p
+                    style="color: var(--text-secondary); text-align: center; margin-bottom: 3rem; line-height: 1.6; font-size: 1.05rem;">
+                    We'll get back to you as fast as possible. Our support team is available 24/7 for all Premium
+                    version users.</p>
+                <div style="text-align: center; display: grid; gap: 2.5rem;">
+                    <div>
+                        <p
+                            style="color: var(--text-secondary); margin-bottom: 0.5rem; font-size: 0.85rem; text-transform: uppercase; opacity: 0.6;">
+                            Telegram Support</p>
+                        <h2
+                            style="color: var(--text-primary); font-size: 2.4rem; font-weight: 700; letter-spacing: -1px;">
+                            @N1_htPr1</h2>
+                    </div>
+                    <div>
+                        <p
+                            style="color: var(--text-secondary); margin-bottom: 0.5rem; font-size: 0.85rem; text-transform: uppercase; opacity: 0.6;">
+                            Email Support</p>
+                        <p style="color: var(--text-primary); font-size: 1.2rem; font-weight: 500;">
+                            bestbetgamess@gmail.com</p>
+                    </div>
                 </div>
             </div>
         </div>
