--- a/website/contact.html
+++ b/website/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8" />
@@ -28,7 +28,7 @@
         </div>
     </nav>
     <main class="hero"
-        style="background: #000; min-height: calc(100vh - 80px); display: flex; align-items: flex-end; justify-content: center; padding-bottom: 15vh; padding-top: 100px;">
+        style="background: #000; min-height: calc(100vh - 120px); display: flex; align-items: flex-end; justify-content: center; padding-bottom: 20vh; padding-top: 100px;">
         <div class="contact-layout-wrapper"
             style="position: relative; width: 100%; max-width: 650px; margin: 0 auto; padding: 0 20px;">
             <div class="contact-visual-container"
