site: add black footer back for scrolling effect

--- a/website/contact.html
+++ b/website/contact.html
@@ -61,7 +61,7 @@
         </div>
     </nav>
     <main class="hero"
-        style="background: #000; min-height: 100vh; display: flex; align-items: center; justify-content: center; padding-top: 80px;">
+        style="background: #000; min-height: 100vh; display: flex; align-items: center; justify-content: center; padding-top: 80px; padding-bottom: 100px;">
         <div class="contact-layout-wrapper"
             style="position: relative; width: 100%; max-width: 650px; margin: 0 auto; padding: 0 20px;">
             <div class="contact-visual-container"
@@ -101,6 +101,10 @@
             </div>
         </div>
     </main>
+    <footer
+        style="background: #000; color: #888; padding: 4rem 1rem; text-align: center; position: relative; z-index: 10;">
+        <p>&copy; 2026 Content Scraper. Все права защищены.</p>
+    </footer>
 </body>
 
 </html>
