--- a/website/en/contact.html
+++ b/website/en/contact.html
@@ -61,11 +61,11 @@
         </div>
     </nav>
     <main class="hero"
-        style="background: #000; min-height: 100vh; display: flex; align-items: center; justify-content: center; padding-top: 80px;">
+        style="background: #000; min-height: 100vh; display: flex; align-items: center; justify-content: center; padding-top: 80px; padding-bottom: 100px;">
         <div class="contact-layout-wrapper"
             style="position: relative; width: 100%; max-width: 650px; margin: 0 auto; padding: 0 20px;">
             <div class="contact-visual-container"
-                style="position: fixed; top: 45%; left: 50%; transform: translate(-50%, -50%); width: 100%; max-width: 900px; z-index: 1; opacity: 0.4; pointer-events: none;">
+                style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 100%; max-width: 900px; z-index: 1; opacity: 0.4; pointer-events: none;">
                 <img src="../images/contact_visual.png" alt="Ghost" class="spooky-img"
                     style="width: 100%; mask-image: radial-gradient(circle at center, black 25%, transparent 75%); -webkit-mask-image: radial-gradient(circle at center, black 25%, transparent 75%);">
             </div>
@@ -101,6 +101,10 @@
             </div>
         </div>
     </main>
+    <footer
+        style="background: #000; color: #888; padding: 4rem 1rem; text-align: center; position: relative; z-index: 10;">
+        <p>&copy; 2026 Content Scraper. All rights reserved.</p>
+    </footer>
 </body>
 
 </html>
