site: reduce scroll spacer to 50vh and force CSS cache burst

--- a/website/contact.html
+++ b/website/contact.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact | Content Scraper</title>
-    <link rel="stylesheet" href="style.css">
+    <!-- Cache busting: v=2 -->
+    <link rel="stylesheet" href="style.css?v=2">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;500;700&display=swap" rel="stylesheet">
     <style>
         @media (max-width: 768px) {
@@ -101,8 +102,8 @@
             </div>
         </div>
     </main>
-    <!-- Spacer to extend page without footer -->
-    <div style="height: 80vh; background: #000; width: 100%; position: relative; z-index: 0;"></div>
+    <!-- Spacer to extend page without footer (reduced to 50vh) -->
+    <div style="height: 50vh; background: #000; width: 100%; position: relative; z-index: 0;"></div>
 </body>
 
 </html>
