Professional Button Management: 3-button support, Custom Append mode, Admin UI revamp, and SEO overhaul.

--- a/website/docs.html
+++ b/website/docs.html
@@ -224,7 +224,31 @@
         </section>
 
         <section class="doc-section">
-            <h2>6. Часто задаваемые вопросы (FAQ)</h2>
+            <h2>7. Смена аккаунта и сброс сессий</h2>
+            <p>Если вам нужно сменить Telegram-аккаунт, привязанный к скрипту, или полностью сбросить базу данных,
+                следуйте этой инструкции.</p>
+
+            <h3>Как сбросить сессию</h3>
+            <p>1. Полностью выключите скрипт (закройте окно терминала).</p>
+            <p>2. Найдите файлы с расширением <code>.session</code> в корневой папке проекта.</p>
+            <p>3. Удалите эти файлы. При следующем запуске скрипт снова попросит ввести номер телефона.</p>
+
+            <h3>Как очистить базу данных</h3>
+            <p>Файл <code>database.db</code> хранит все ваши пары каналов, статистику и настройки кнопок. Если вы хотите
+                начать "с чистого листа", просто удалите этот файл.</p>
+
+            <div class="warning-box">
+                <strong>Внимание:</strong> Никогда не удаляйте и не изменяйте файлы с расширением <code>.py</code>, если
+                вы не являетесь разработчиком. Это приведет к поломке скрипта.
+            </div>
+
+            <p>Для наглядности, вот как выглядят файлы сессий в папке:</p>
+            <img src="images/sessions.png" alt="Telegram Sessions"
+                style="width: 100%; max-width: 500px; border-radius: 12px; margin: 1rem 0; border: 1px solid var(--glass-border);">
+        </section>
+
+        <section class="doc-section">
+            <h2>8. Часто задаваемые вопросы (FAQ)</h2>
             <h3>Нужен ли VPN?</h3>
             <p>Если в вашем регионе Telegram не заблокирован напрямую — нет. Если же вы запускаете бота из Рашки без
                 прокси, могут быть задержки.</p>
