--- a/website/index.html
+++ b/website/index.html
@@ -65,9 +65,10 @@
         </section>
 
         <section id="features" class="features">
-            <h2>Премиум Возможности</h2>
+            <h2>Профессиональный функционал для Telegram-бизнеса</h2>
             <div class="grid">
-                <div class="card glass special-feature" style="border: 1px solid rgba(0, 255, 136, 0.3);">
+                <!-- Video Notes Support -->
+                <div class="card glass special-feature" style="border: 1px solid rgba(168, 85, 247, 0.4);">
                     <div class="icon">
                         <div class="vn-icon-container">
                             <svg viewBox="0 0 100 100" class="vn-icon-svg">
@@ -86,35 +87,51 @@
                             </svg>
                         </div>
                     </div>
-                    <h3>Video Note Support</h3>
-                    <p>Эксклюзив! Полная поддержка и автоматическая конвертация "Кружочков".</p>
+                    <h3>Поддержка "Кружочков"</h3>
+                    <p>Эксклюзивная технология автоматической конвертации обычного видео в формат видео-сообщений (Round
+                        Video). Постите контент, который выглядит как личный!</p>
                 </div>
+
+                <!-- Professional Button Management -->
+                <div class="card glass" style="border: 1px solid rgba(0, 255, 136, 0.3);">
+                    <div class="icon">🕹️</div>
+                    <h3>Управление кнопками</h3>
+                    <p>Новый режим принудительного добавления до 3-х кастомных кнопок к каждому посту. Идеально для
+                        ссылок на "Связь с админом", "Отзывы" или "Заказать рекламу".</p>
+                </div>
+
+                <!-- 24/7 Monitoring -->
                 <div class="card glass">
                     <div class="icon">⚡</div>
-                    <h3>Клонирование 24/7</h3>
-                    <p>Мгновенная репликация постов из донорских каналов в ваши цели без задержек.</p>
+                    <h3>Мониторинг 24/7</h3>
+                    <p>Мгновенный перехват новых постов. Скрипт работает в реальном времени, клонируя контент быстрее,
+                        чем ваши конкуренты успеют его заметить.</p>
                 </div>
+
+                <!-- Media Support -->
                 <div class="card glass">
                     <div class="icon">🖼️</div>
-                    <h3>Поддержка медиа</h3>
-                    <p>Полная поддержка фото, видео, документов, аудио и сложных медиа-групп (альбомов).</p>
+                    <h3>Глобальное Медиа</h3>
+                    <p>Безупречная работа с альбомами (Media Groups), документами, аудио и голосовыми сообщениями. Весь
+                        контент переносится без потери качества.</p>
                 </div>
+
+                <!-- ID Sniffer -->
                 <div class="card glass">
                     <div class="icon">
                         <img src="images/demon_icon.png" alt="Sniffer" class="sniffer-icon-img">
                     </div>
                     <h3>Channel ID Sniffer</h3>
-                    <p>Перехватывайте ID любых приватных каналов в реальном времени. Просто подпишитесь, и ID у вас.</p>
+                    <p>Инструмент для перехвата ID любых каналов, даже приватных. Просто подпишитесь на канал, и его
+                        идентификатор мгновенно появится в вашем логе.</p>
                 </div>
+
+                <!-- Advanced Filters -->
                 <div class="card glass">
                     <div class="icon">🪄</div>
-                    <h3>Умные фильтры</h3>
-                    <p>Автоматическое удаление кнопок, замена ссылок и очистка текста на лету.</p>
-                </div>
-                <div class="card glass">
-                    <div class="icon">⚙️</div>
-                    <h3>Админ-панель</h3>
-                    <p>Управляйте парами и настройками прямо из Telegram через мощное инлайн-меню.</p>
+                    <h3>Умные Фильтры (Regex)</h3>
+                    <p>Глубокая очистка текста: удаление ссылок конкурентов, водяных знаков и замена любого текста по
+                        вашим правилам любой сложности.</p>
                 </div>
             </div>
         </section>
